--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -202,21 +202,22 @@ header{
     }
 }
 .section-b{
-    h2{
-        letter-spacing: 5px;
-        font-weight: 400;
-        position: relative;
-        &::before{
-            content: "";
-            display: inline-block;
-            position: absolute;
-            width: 50px;
-            height: 7px;
-            background-color: rgb(183,126,49);
-            top: 40px;
-            left: 650px;
+    .text-center{
+        h2{
+            letter-spacing: 5px;
+            font-weight: 400;
+            &::after{
+                content: "";
+                display: block;
+                width: 50px;
+                height: 7px;
+                background-color: rgb(183,126,49);
+                margin-top: 5px;
+                margin-left: 100px;
+            }
         }
     }
+    
     .container-fluid{
         .row{
             .img-1{
@@ -297,14 +298,13 @@ header{
             }
             h2{
                 letter-spacing: 5px;
-                &::before{
+                &::after{
                     content: "";
                     display: block;
-                    position: absolute;
                     width: 50px;
                     height: 8px;
                     background-color: rgb(183,126,50);
-                    top: 315px;
+                    margin-top: 10px;
                 }
             }
             p{
@@ -349,17 +349,15 @@ header{
 .choice{
     .text-center{
         h2{
-            position: relative;
             letter-spacing: 4px;
-            &::before{
+            &::after{
                 content: "";
                 display: block;
-                position: absolute;
                 width: 60px;
                 height: 8px;
                 background-color: rgb(183,126,50);
-                top: 50px;
-                left: 650px;
+                margin-left: 130px;
+                margin-top: 5px;
             }
         }
     }
@@ -543,14 +541,13 @@ header{
     .text{
         h2{
             letter-spacing: 5px;
-            position: relative;
             &::after{
                 content: "";
-                position: absolute;
                 display: block;
                 width: 60px;
                 height: 10px;
-                left: 650px;
+                margin-left: 130px;
+                margin-top: 5px;
                 background-color: rgb(183,126,49);
             }
         }
